<resources>
    <string name="app_name">Coffee App</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="content">Products</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>

    <string name="espresso">Espresso</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="mocha">Mocha</string>
    <string name="naked">Naked</string>
    <string name="ristretto">Ristretto</string>
    <string name="crema">Caffè Crema</string>
    <string name="long_black">Long black</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="about_content">It\'s just a moment in time – just one hand reaching over the counter to present a cup to another outstretched hand.\n\nBut it’s a connection…\n\nWe make sure everything we do honors that connection – from our commitment to the highest quality coffee in the world, to the way we engage with our customers and communities to do business responsibly.\n\nFrom our beginnings as a single store over forty years ago, in every place that we’ve been, and every place that we touch, we\'ve tried to make it a little better than we found it.</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="share">Compartilhar</string>
</resources>
