<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.coffeeapp.ui.fragment.ContactFragment">

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_email"
        android:text="@string/email"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_phone"
        android:text="@string/phone"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/facebook_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/facebook"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/twitter_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_twitter"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_twitter"
        android:text="@string/twitter"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/instagram_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/ic_instagram"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_instagram"
        android:text="@string/instagram"
        android:textSize="24sp" />

</LinearLayout>
